Matching algorithm implemented

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">vehiclematch</string>
-    <string name="title_activity_maps">Map</string>
+    <string name="no_vehicles_nearby">No vehicles nearby</string>
+
 </resources>
